--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">NostalgiaMatching(FYP2024)</string>
     <!-- Gabriel -->
+    <string name="Title">Nostalgia Matching</string>
+    <string name="easy">Easy</string>
+    <string name="medium">Normal</string>
+    <string name="hard">Expert</string>
+    <string name="instructions">How To Play</string>
     <!-- HaiXuan-->
     <string name="settings">Settings</string>
     <string name="lang">Language</string>
