--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,15 @@
     <string name="langTA">தமிழ்</string>
     <string name="homePage">Home Page</string>
     <string name="KYDZWeb">KYDZ Website</string>
+    <string name="puzzle_1">Puzzle 1</string>
+    <string name="puzzle_2">Puzzle 2</string>
+    <string name="puzzle_3">Puzzle 3</string>
+    <string name="puzzle_4">Puzzle 4</string>
+    <string name="start_puzzle">Start Puzzle</string>
+    <string name="puzzle_5">Puzzle 5</string>
+    <string name="puzzle_6">Puzzle 6</string>
+    <string name="puzzle_7">Puzzle 7</string>
+    <string name="puzzle_8">Puzzle 8</string>
     <!-- Cheng En-->
     <!-- Jin Yan-->
 
