First rendition of How to Play page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,12 @@
     <string name="homePage">Home Page</string>
     <string name="KYDZWeb">KYDZ Website</string>
     <!-- Cheng En-->
+    <string name="htp1">How to play</string>
+    <string name="htp2">Select a difficulty from the home page, 1* is the easiest, while 3* is the most advanced.</string>
+    <string name="htp3">Select one of the eight themes available to start your game.</string>
+    <string name="htp4">To complete the game, gather all the green ticks through the correct options.</string>
+    <string name="htp5">A wrong option will be denoted by a red cross and its sound effects. Good luck and have fun!</string>
+    <string name="htp6">Home page</string>
     <!-- Jin Yan-->
 
 </resources>
