--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,15 +15,14 @@
     <string name="langTA">தமிழ்</string>
     <string name="homePage">Home Page</string>
     <string name="KYDZWeb">KYDZ Website</string>
-    <string name="puzzle_1">Puzzle 1</string>
-    <string name="puzzle_2">Puzzle 2</string>
-    <string name="puzzle_3">Puzzle 3</string>
-    <string name="puzzle_4">Puzzle 4</string>
-    <string name="start_puzzle">Start Puzzle</string>
-    <string name="puzzle_5">Puzzle 5</string>
-    <string name="puzzle_6">Puzzle 6</string>
-    <string name="puzzle_7">Puzzle 7</string>
-    <string name="puzzle_8">Puzzle 8</string>
+    <string name="chooseTheme">Choose a theme</string>
+    <string name="start">Start!</string>
+    <string name="flask">Flask</string>
+    <string name="laksa">Laksa</string>
+    <string name="find">Find:</string>
+    <string name="chooseDiff">Choose Difficulty</string>
+    <string name="image_button_flask_description">Flask button</string>
+    <string name="image_button_laksa_description">Laksa button</string>
     <!-- Cheng En-->
     <string name="htp1">How to play</string>
     <string name="htp2">Select a difficulty from the home page, 1* is the easiest, while 3* is the most advanced.</string>
