--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,13 @@
     <string name="Dog">Dog</string>
     <string name="Clogs">Clogs</string>
     <string name="Spoon">Spoon</string>
+    <string name="Parrot">Parrot</string>
+    <string name="DimSum">Dim Sum</string>
+    <string name="Tingkat">Tingkat</string>
+    <string name="Mahjong">Mahjong</string>
+    <string name="Orchid">Orchid</string>
+    <string name="Satay">Satay</string>
+    <string name="GoldCoins">Gold Coins</string>
+    <string name="WeddingBasket">Wedding Basket</string>
 
 </resources>
