--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
     <string name="hard">Expert</string>
     <string name="instructions">How To Play</string>
 
+    <string name="settings">Settings</string>
+    <string name="lang">Bahasa</string>
+    <string name="langEN">English</string>
+    <string name="langCN">中文</string>
+    <string name="langIN">Bahasa</string>
+    <string name="langTA">தமிழ்</string>
     <string name="homePage">Home Page</string>
     <string name="KYDZWeb">KYDZ Website</string>
     <string name="chooseTheme">Choose a theme</string>
