Patched link for normal puzzles

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,67 +1,67 @@
 <resources>
-    <string name="app_name">நினைவுச்சின்ன (FYP2024)</string>
+    <string name="app_name">NostalgiaMatching(FYP2024)</string>
     <!-- Gabriel -->
-    <string name="Title">நினைவுச்சின்ன</string>
-    <string name="easy">எளிது</string>
-    <string name="medium">இலவசம்</string>
-    <string name="hard">வல்லுநர்</string>
-    <string name="instructions">எப்படி விளையாடுவது</string>
-    <!-- HaiXuan-->
-    <string name="settings">அமைப்புகள்</string>
-    <string name="lang">மொழி</string>
-    <string name="langEN">English</string>
-    <string name="langCN">中文</string>
-    <string name="langIN">Bahasa</string>
-    <string name="langTA">தமிழ்</string>
-    <string name="homePage">முகப்புப்பக்கம்</string>
-    <string name="KYDZWeb">KYDZ வலைத்தளம்</string>
-    <string name="chooseTheme">தீமையை தேர்வு செய்யவும்</string>
-    <string name="start">தொடங்கு!</string>
-    <string name="flask">கண்ணாடி பாத்திரம்</string>
-    <string name="laksa">லக்ஸா</string>
-    <string name="find">தேடு:</string>
-    <string name="chooseDiff">விகிதத்தை தேர்வு செய்யவும்</string>
-    <string name="tryAgain">மீண்டும் முயற்சிக்கவும்!</string>
-    <string name="goodJob">நல்ல வேலை!</string>
-    <string name="back">மீண்டும்</string>
-    <string name="image_button_flask_description">கண்ணாடி பாத்திரம் பொத்தான்</string>
-    <string name="image_button_laksa_description">லக்ஸா பொத்தான்</string>
-    <!-- Cheng En-->
-    <string name="htp1">விளையாட்டு விதிமுறைகள்</string>
-    <string name="htp2">முகப்புப் பக்கத்திலிருந்து ஒரு சிரமத்தைத் தேர்ந்தெடுக்கவும், 1* எளிதானது, 3* மிகவும் மேம்பட்டது.</string>
-    <string name="htp3">உங்கள் விளையாட்டைத் தொடங்க எட்டு தீம்களில் ஒன்றைத் தேர்ந்தெடுக்கவும்.</string>
-    <string name="htp4">விளையாட்டை முடிக்க, சரியான விருப்பங்கள் மூலம் அனைத்து பச்சை உண்ணிகளையும் சேகரிக்கவும்.</string>
-    <string name="htp5">ஒரு தவறான விருப்பம் சிவப்பு குறுக்கு மற்றும் அதன் ஒலி விளைவுகளால் குறிக்கப்படும். நல்ல அதிர்ஷ்டம் மற்றும் வேடிக்கை!</string>
-    <string name="cutlery">உபகரணங்கள்</string>
-    <string name="food">உணவு</string>
-    <string name="animals">விலங்குகள்</string>
-    <string name="livingRoom">பிழைத்தல் அறை</string>
-    <string name="flower">மலர்</string>
-    <string name="scenery">காட்சி</string>
-    <string name="snacks">தின்னி</string>
-    <string name="householdItems">வீட்டு உபகரணங்கள்</string>
-    <!-- Jin Yan-->
-    <string name="Armchair">மர நாற்காலி</string>
-    <string name="Bird_Cage">பறவை கூண்டு</string>
-    <string name="Rose">ரோஜா</string>
-    <string name="Dog">நாய்</string>
-    <string name="Clogs">மர செருப்பு</string>
-    <string name="Spoon">கரண்டி</string>
-    <string name="Parrot">கிளி</string>
-    <string name="DimSum">டிம் சம்</string>
-    <string name="Tingkat">நிலைப்படுத்தப்பட்ட தொட்டி</string>
-    <string name="Mahjong">மாஜாங்</string>
-    <string name="Orchid">ஆர்க்கிட்</string>
-    <string name="Satay">சடாய்</string>
-    <string name="GoldCoins">தங்க நாணயங்கள்</string>
-    <string name="WeddingBasket">திருமணக்கூடை</string>
-    <string name="Find3Cutlery">3 கட்லரிகளைக் கண்டுபிடி</string>string>
-    <string name="Find3Food">3 உணவைக் கண்டுபிடி</string>
-    <string name="Find3Living">3 உணவைக் கண்டுபிடி</string>
-    <string name="Find3Flowers">3 உணவைக் கண்டுபிடி</string>
-    <string name="Find3Scenery">3 காட்சிகளைக் கண்டறியவும்</string>
-    <string name="Find3Snacks">3 சிற்றுண்டிகளைக் கண்டறியவும்</string>
-    <string name="Find3Animals">3 விலங்குகளைக் கண்டுபிடி</string>
-    <string name="Find3item">3 உருப்படிகளைக் கண்டறியவும்</string>
-</resources>
+<string name="Title">நோஸ்டால்ஜியா</string>
+<string name="easy">எளிது</string>
+<string name="medium">
+நன்றி</string>
+<string name="hard">தீவிர</string>
+<string name="instructions">வழிகாட்டி</string>
 
+<string name="settings">அமைப்புகள்</string>
+<string name="lang">மொழி</string>
+<string name="langEN">English</string>
+<string name="langCN">中文</string>
+<string name="langIN">Bahasa</string>
+<string name="langTA">தமிழ்</string>
+<string name="homePage">முகப்பு பக்கம்</string>
+<string name="KYDZWeb">KYDZ வலைத்தளம்</string>
+<string name="chooseTheme">ஒரு தீமையைத் தேர்ந்தெடுக்கவும்</string>
+<string name="start">தொடங்கு!</string>
+<string name="flask">புட்டி</string>
+<string name="laksa">லக்ஸா</string>
+<string name="find">கண்டுபிடி:</string>
+<string name="chooseDiff">சிரமத்தைத் தேர்ந்தெடுக்கவும்</string>
+<string name="tryAgain">மீண்டும் முயற்சி செய்!</string>
+<string name="goodJob">நல்ல வேலை!</string>
+<string name="back">பின்னால்</string>
+<string name="image_button_flask_description">புட்டி பொத்தான்</string>
+<string name="image_button_laksa_description">லக்ஸா பொத்தான்</string>
+    <!-- Cheng En-->
+<string name="htp1">எப்படி விளையாடுவது</string>
+<string name="htp2">முகப்பு பக்கத்தில் இருந்து சிரமத்தைத் தேர்ந்தெடுக்கவும், 1* என்பது எளிதானது, 3* என்பது மிகவும் மேம்பட்டது.</string>
+<string name="htp3">உங்கள் விளையாட்டைத் தொடங்க எட்டு தீமைகளில் ஒன்றைத் தேர்ந்தெடுக்கவும்.</string>
+<string name="htp4">சரியான விருப்பங்களின் மூலம் அனைத்து பச்சை குறிப்புகளையும் சேகரிக்க விளையாட்டை முடிக்கவும்.</string>
+<string name="htp5">தவறான விருப்பம் ஒரு சிவப்பு குறியீடு மற்றும் அதன் ஒலிப் பயன்களால் குறிக்கப்படும். வாழ்த்துக்கள் மற்றும் மகிழுங்கள்!</string>
+<string name="cutlery">கட்லரி</string>
+<string name="food">உணவு</string>
+<string name="animals">விலங்கு</string>
+<string name="livingRoom">உடன்</string>
+<string name="flower">மலர்</string>
+<string name="scenery">காட்சி</string>
+<string name="snacks">கிரிப்ஸ்</string>
+<string name="householdItems">வீட்டு பொருட்கள்</string>
+    <!-- Jin Yan-->
+<string name="Armchair">பிடிவாதம்</string>
+<string name="Bird_Cage">பறவை கூண்டு</string>
+<string name="Rose">ரோஜா</string>
+<string name="Dog">நாய்</string>
+<string name="Clogs">பாதணி</string>
+<string name="Spoon">கரண்டி</string>
+<string name="Parrot">கிளி</string>
+<string name="DimSum">டிம் சம்</string>
+<string name="Tingkat">டிங்கட்</string>
+<string name="Mahjong">மாஜாங்</string>
+<string name="Orchid">ஆர்கிட்</string>
+<string name="Satay">சடாய்</string>
+<string name="GoldCoins">பணம்</string>
+<string name="WeddingBasket">கடி</string>
+<string name="Find3Cutlery">3 கட்லர தேடு</string>
+<string name="Find3Food">3 உணவு தேடு</string>
+<string name="Find3Living">3 உடன் பொருள் தேடு</string>
+<string name="Find3Flowers">3 மலர் தேடு</string>
+<string name="Find3Scenery">3 காட்சி தேடு</string>
+<string name="Find3Snacks">3 கிரிப்ஸ் தேடு</string>
+<string name="Find3Animals">3 விலங்கு தேடு</string>
+<string name="Find3item">3 வீட்டுப் பொருள் தேடு</string>
+</resources>
