First passes at responsiveness

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">NostalgiaMatching(FYP2024)</string>
     <!-- Gabriel -->
-<string name="Title">நோஸ்டால்ஜியா</string>
+<string name="Title">நினைப்பொ</string>
 <string name="easy">எளிது</string>
 <string name="medium">
 நன்றி</string>
@@ -16,7 +16,7 @@
 <string name="langTA">தமிழ்</string>
 <string name="homePage">முகப்பு பக்கம்</string>
 <string name="KYDZWeb">KYDZ வலைத்தளம்</string>
-<string name="chooseTheme">ஒரு தீமையைத் தேர்ந்தெடுக்கவும்</string>
+<string name="chooseTheme">ஒரு தீம் தேர்ந்தெடு</string>
 <string name="start">தொடங்கு!</string>
 <string name="flask">புட்டி</string>
 <string name="laksa">லக்ஸா</string>
