Fixed Home Screen and Settings Screen responsiveness for Tamil, fixed typo on title and error for normal game 6 where a tick is displayed for a wrong selected option, added stars to level selection pages as per the XD File. (Also bolded all puzzle category titles)

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -8,14 +8,14 @@
 <string name="hard">தீவிர</string>
 <string name="instructions">வழிகாட்டி</string>
 
-<string name="settings">அமைப்புகள்</string>
+<string name="settings">அ-பு </string>
 <string name="lang">மொழி</string>
 <string name="langEN">English</string>
 <string name="langCN">中文</string>
 <string name="langIN">Bahasa</string>
 <string name="langTA">தமிழ்</string>
 <string name="homePage">முகப்பு பக்கம்</string>
-<string name="KYDZWeb">KYDZ வலைத்தளம்</string>
+<string name="KYDZWeb">KYDZ வ-த் </string>
 <string name="chooseTheme">ஒரு தீம் தேர்ந்தெடு</string>
 <string name="start">தொடங்கு!</string>
 <string name="flask">புட்டி</string>
