Managed to get one line text for all puzzles

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -42,7 +42,7 @@
 <string name="snacks">கிரிப்ஸ்</string>
 <string name="householdItems">வீட்டு பொருட்கள்</string>
     <!-- Jin Yan-->
-<string name="Armchair">பிடிவாதம்</string>
+<string name="Armchair">நாற்காலி</string>
 <string name="Bird_Cage">பறவை கூண்டு</string>
 <string name="Rose">ரோஜா</string>
 <string name="Dog">நாய்</string>
