Centered all text and images for hard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="Clogs">Clogs</string>
     <string name="Spoon">Spoon</string>
     <string name="Parrot">Parrot</string>
-    <string name="DimSum">Dim Sum</string>
+    <string name="DimSum">Dimsum</string>
     <string name="Tingkat">Tingkat</string>
     <string name="Mahjong">Mahjong</string>
     <string name="Orchid">Orchid</string>
