normal, expert undo button add
undo button add

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -17,7 +17,7 @@
 <string name="homePage">முகப்பு பக்கம்</string>
 <string name="KYDZWeb">KYDZ வ-த் </string>
 <string name="chooseTheme">ஒரு தீம் தேர்ந்தெடு</string>
-<string name="start">தொடங்கு!</string>
+<string name="start">துவங்கு!</string>
 <string name="flask">புட்டி</string>
 <string name="laksa">லக்ஸா</string>
 <string name="find">கண்டுபிடி:</string>
