--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -21,7 +21,7 @@
     <string name="laksa">叻沙</string>
     <string name="find">找：</string>
     <string name="chooseDiff">选择难度</string>
-    <string name="tryAgain">再试一次！</string>
+    <string name="tryAgain">重试！</string>
     <string name="goodJob">做得好！</string>
     <string name="back">返回</string>
     <string name="image_button_flask_description">烧瓶按钮</string>
