--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -64,4 +64,5 @@
 <string name="Find3Snacks">3 கிரிப்ஸ் தேடு</string>
 <string name="Find3Animals">3 விலங்கு தேடு</string>
 <string name="Find3item">3 வீட்டுப் பொருள் தேடு</string>
+    <string name="next">அடுத்து</string>
 </resources>
