--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -55,4 +55,5 @@
     <string name="Satay">沙爹</string>
     <string name="GoldCoins">金币</string>
     <string name="WeddingBasket">婚礼篮</string>
+    <string name="next">下一关</string>
 </resources>
